BG gradient jumping on mobile scroll, this might fix

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -36,6 +36,7 @@ body {
 body {
   color: var(--foreground);
   background: var(--bg-gradient);
+  background-attachment: scroll;
   font-family: var(--merriweather) Arial, Helvetica, sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
